Fix for titlebar going out of view in Windows

--- a/css/main.css
+++ b/css/main.css
@@ -146,20 +146,32 @@ html, body {
  }
 
  #appContainer{
-     background-color: white;
-     border-bottom-left-radius: 5px;
-     border-bottom-right-radius: 5px;
-     height: 100%;
-     border-top: none;
-     justify-content: 'center';
-     flex-grow: 1;
-     overflow: hidden;
-     border-bottom: thin solid black;
-     border-left: thin solid black;
-     border-right: thin solid black;
-     padding-bottom: 20px;
+    background-color: white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    height: 100%;
+    border-top: none;
+    justify-content: 'center';
+    flex-grow: 1;
+    overflow: hidden;
+    border-bottom: thin solid black;
+    border-left: thin solid black;
+    border-right: thin solid black;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
  }
 
+ .modal {
+    top: 40% !important;
+    max-width: 500px;
+    border-radius: 5px;
+}
+
+.active {
+
+}
 /* Scroll Bar */
 ::-webkit-scrollbar {     
     background-color: #fff;
@@ -178,11 +190,12 @@ html, body {
 #editor {
     padding: 10px 15px 20px 15px;
     height: 100%;
-    width: auto;
+    width: 100%;
     max-width: 1200px;
     margin: auto;
     overflow: auto;
     border-radius: 5px;
+    align-self: center;
 }
 
 /* Control Panel */
@@ -214,6 +227,28 @@ html, body {
     padding: 10px;
     top: 30px !important;
     border-radius: 5px;
+}
+
+
+/* Image Insert */
+#imageInsert {
+    background-color: white !important;
+    color: black !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#image_insert_type_switch{
+    margin-top: 30px;
+}
+
+#image_insert_form {
+    width: 100%;
+}
+
+#image_url_input {
+    width: 90%;
 }
 
 
